# Niko-Agent

./: .env.example  .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  install.sh  pyproject.toml
benchmarks/: coding_tasks.json
docs/: configuration.md  memory.md  sandbox.md  skills.md
niko_agent/: __init__.py  cli.py  testing.py
niko_agent/commands/: slash.py
niko_agent/config/: __init__.py
niko_agent/core/: __init__.py  context_manager.py  engine.py  model_output.py  plan_mode.py  runtime.py  runtime_checkpoints.py  sensitive_paths.py  session_branch.py  tool_executor.py  tool_policy.py  worker_manager.py  (+2 more)
report/: 2026-07-22-status.md
scripts/: collect_resume_metrics.py  evaluate.py  run_business_scenario_dogfood.py  run_large_scale_experiments.py  run_provider_experiments.py  run_real_session_acceptance.py  run_v3_human_scenario_gate.py  verify.py
tests/: test_agent_workers_acceptance.py  test_architecture_boundaries.py  test_ask_user.py  test_business_scenario_dogfood.py  test_context_governance_acceptance.py  test_context_manager.py  test_engine_acceptance.py  test_evaluator.py  test_memory.py  test_metrics.py  test_niko_security_recovery.py  test_permissions_acceptance.py  test_pico.py  test_release_smoke.py  test_run_evidence.py  test_run_store.py  test_runtime_evidence_acceptance.py  test_safety_invariants.py  test_sandbox_config.py  test_sandbox_runner.py  test_skills_acceptance.py  test_task_state.py  test_todo_ledger_acceptance.py  test_tool_policy_acceptance.py  test_tool_validation.py  test_tui.py  test_usage.py  test_v3_runtime.py
(+40 files in other folders)
